--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -51,4 +51,10 @@
         <item name="android:windowExitAnimation">@anim/out_to_top_right</item>
     </style>
 
+    <!--spinner-->
+    <style name="anim_spinner" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/spinner_in</item>
+        <item name="android:windowExitAnimation">@anim/spinner_out</item>
+    </style>
+
 </resources>
