--- a/src/main/res/layout/m_dialog_recycler_item.xml
+++ b/src/main/res/layout/m_dialog_recycler_item.xml
@@ -2,9 +2,10 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/m_recycler_item_text"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/size_normal"
+    android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:gravity="center_vertical"
+    android:minHeight="@dimen/size_normal"
     android:paddingLeft="@dimen/edge_normal"
     android:paddingRight="@dimen/edge_normal"
     android:textColor="@color/label"
